--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginbg"
     tools:context=".RegisterActivity">
 
     <EditText
@@ -41,4 +42,15 @@
         app:layout_constraintEnd_toEndOf="@+id/etRegPassword"
         app:layout_constraintStart_toStartOf="@+id/etRegPassword"
         app:layout_constraintTop_toBottomOf="@+id/etRegPassword" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="159dp"
+        android:layout_height="152dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.214"
+        app:srcCompat="@mipmap/izaikoiconbgremoved_foreground" />
 </androidx.constraintlayout.widget.ConstraintLayout>
