--- a/app/src/main/res/layout/activity_google_reg.xml
+++ b/app/src/main/res/layout/activity_google_reg.xml
@@ -74,6 +74,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/etFirstName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
