--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginbg"
     tools:context=".ItemList">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
+        android:fontFamily="@font/latoheavy"
         android:text="Item ID"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,8 +27,10 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="20dp"
         android:ems="8"
+        android:fontFamily="@font/latoregular"
         android:hint="Item Name"
         android:inputType="textPersonName"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etBrand" />
@@ -38,6 +42,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="20dp"
         android:ems="8"
+        android:fontFamily="@font/latoregular"
         android:hint="Cost of Product"
         android:inputType="textPersonName"
         android:textSize="24sp"
@@ -51,6 +56,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="20dp"
         android:ems="8"
+        android:fontFamily="@font/latoregular"
         android:hint="Estimated Retail"
         android:inputType="textPersonName"
         android:textSize="24sp"
@@ -65,6 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:backgroundTint="#50CFFF"
         app:menu="@menu/bottom_navbar" />
 
     <EditText
@@ -74,6 +81,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="28dp"
         android:ems="8"
+        android:fontFamily="@font/latoregular"
         android:hint="Company/Brand"
         android:inputType="textPersonName"
         android:textSize="24sp"
@@ -99,6 +107,7 @@
             android:layout_height="54dp"
             android:layout_weight="1"
             android:height="48dp"
+            android:fontFamily="@font/latobold"
             android:hint="Condition" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -121,6 +130,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:height="48dp"
+            android:fontFamily="@font/latobold"
             android:hint="Select a Category" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -145,6 +155,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:fontFamily="@font/latomedium"
         android:gravity="start|top"
         android:hint="Notes/Details"
         android:inputType="textMultiLine"
