--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="300dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="Enter Email Address"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
@@ -27,6 +28,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="Creat Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -38,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/latomedium"
         android:text="Create Account"
         app:layout_constraintEnd_toEndOf="@+id/etRegPassword"
         app:layout_constraintStart_toStartOf="@+id/etRegPassword"
