--- a/app/src/main/res/layout/activity_google_reg.xml
+++ b/app/src/main/res/layout/activity_google_reg.xml
@@ -13,6 +13,7 @@
         android:layout_height="48dp"
         android:layout_marginBottom="32dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="First Name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/etLastName"
@@ -25,6 +26,7 @@
         android:layout_height="48dp"
         android:layout_marginBottom="32dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="Last Name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/etPassword"
@@ -37,8 +39,10 @@
         android:layout_height="48dp"
         android:layout_marginBottom="32dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textAlignment="viewStart"
         app:layout_constraintBottom_toTopOf="@+id/etConfirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -49,6 +53,7 @@
         android:layout_height="48dp"
         android:layout_marginBottom="200dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,6 +64,7 @@
         android:id="@+id/registerGoogleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/latomedium"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/latobold"
         android:text="TextView"
         android:textSize="26dp"
         android:textStyle="bold"
@@ -87,7 +94,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.809"
+        app:layout_constraintVertical_bias="0.33"
         app:srcCompat="@mipmap/izaikoiconbgremoved_foreground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
