--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -16,4 +16,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
+
+<!--    <EditText-->
+<!--        android:id="@+id/editTextNumberDecimal"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:ems="10"-->
+<!--        android:inputType="numberDecimal"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        tools:layout_editor_absoluteY="283dp" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
