--- a/app/src/main/res/layout/activity_view_inventory.xml
+++ b/app/src/main/res/layout/activity_view_inventory.xml
@@ -10,7 +10,7 @@
         android:id="@+id/inventoryList"
         android:layout_width="409dp"
         android:layout_height="729dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginTop="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
