--- a/app/src/main/res/layout/activity_view_inventory.xml
+++ b/app/src/main/res/layout/activity_view_inventory.xml
@@ -29,4 +29,28 @@
         app:backgroundTint="#50CFFF"
         app:menu="@menu/bottom_navbar"/>
 
+    <EditText
+        android:id="@+id/etItemNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="25dp"
+        android:ems="10"
+        android:hint="search item number"
+        android:inputType="number"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inventoryList" />
+
+    <Button
+        android:id="@+id/buttonItemSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:text="Search"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/etItemNumber" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
