--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etItemID" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/invtextInputLayout"
+        android:id="@+id/invCatDropDown"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
@@ -123,7 +123,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/invtextInputLayout">
+        app:layout_constraintTop_toBottomOf="@+id/invCatDropDown">
 
         <AutoCompleteTextView
             android:id="@+id/etDropDownBox"
