--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/latobold"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,18 +23,21 @@
         android:id="@+id/tvItemBrand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginStart="76dp"
+        android:fontFamily="@font/latoregular"
         android:text="itemBrand"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="403dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
+        android:fontFamily="@font/latobold"
         android:text="Brand:"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/tvItemBrand"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvItemBrand" />
@@ -42,121 +46,168 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/latobold"
         android:text="Description:"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/tvItemDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/latoregular"
         android:text="itemDescription"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/tvItemBrand"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemBrand"
-        app:layout_constraintVertical_bias="1.0" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/tvItemCat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/latobold"
         android:text="Cost:"
-        app:layout_constraintEnd_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvItemNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginEnd="128dp"
+        android:layout_marginBottom="228dp"
+        android:fontFamily="@font/latoregular"
         android:text="itemNotes"
-        app:layout_constraintStart_toStartOf="@+id/tvItemCondition"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemCondition" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.987"
+        app:layout_constraintStart_toEndOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/tvItemCondition"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tvAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="76dp"
+        android:fontFamily="@font/latoregular"
         android:text="itemAge"
-        app:layout_constraintStart_toStartOf="@+id/tvItemCost"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemCost" />
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.014"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        tools:layout_editor_absoluteY="572dp" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="112dp"
+        android:fontFamily="@font/latobold"
         android:text="Age:"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="572dp" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/latobold"
         android:text="Condition:"
-        app:layout_constraintEnd_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView16"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.117" />
 
     <TextView
         android:id="@+id/tvItemCondition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/latoregular"
         android:text="itemCondition"
-        app:layout_constraintStart_toStartOf="@+id/tvAge"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/tvAge" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginBottom="228dp"
+        android:fontFamily="@font/latobold"
         android:text="Notes:"
-        app:layout_constraintEnd_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvItemCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="28dp"
+        android:fontFamily="@font/latoregular"
         android:text="itemCost"
-        app:layout_constraintStart_toStartOf="@+id/tvItemCat"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemCat" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/tvAge"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.014"
+        app:layout_constraintStart_toEndOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="28dp"
+        android:fontFamily="@font/latobold"
         android:text="Category:"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toStartOf="@+id/tvItemCat" />
 
     <TextView
         android:id="@+id/tvItemCat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="28dp"
+        android:fontFamily="@font/latoregular"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/tvItemDesc"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemDesc" />
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/tvItemCost"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tvItemID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/latobold"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/tvItemBrand"
-        app:layout_constraintStart_toEndOf="@+id/textView4" />
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="207dp"
+        tools:layout_editor_absoluteY="27dp" />
 
     <EditText
         android:id="@+id/etSoldAmount"
@@ -165,6 +216,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="25dp"
         android:ems="10"
+        android:fontFamily="@font/latoregular"
         android:hint="final selling price"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -176,8 +228,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="25dp"
+        android:fontFamily="@font/latobold"
         android:text="$old"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/etSoldAmount" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:layout_width="315dp"
+        android:layout_height="294dp"
+        android:layout_margin="5dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.141"
+        app:shapeAppearanceOverlay="@style/roundImageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
