reference to shapeableimageview

--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -234,6 +234,7 @@
         app:layout_constraintStart_toEndOf="@+id/etSoldAmount" />
 
     <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ivItem"
         android:layout_width="315dp"
         android:layout_height="294dp"
         android:layout_margin="5dp"
