--- a/app/src/main/res/layout/activity_view_inventory.xml
+++ b/app/src/main/res/layout/activity_view_inventory.xml
@@ -9,7 +9,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/inventoryList"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="629dp"
         android:layout_marginBottom="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,44 +42,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <Switch
         android:id="@+id/switch_active_sold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:padding="14dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
         android:textOff="Active"
         android:textOn="Sold"
-        app:layout_constraintStart_toEndOf="@+id/text_view_active_sold"
+        app:layout_constraintEnd_toStartOf="@+id/invCatDropDown"
         app:layout_constraintTop_toBottomOf="@+id/inventoryList" />
 
     <TextView
         android:id="@+id/text_view_active_sold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:padding="14dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
         android:text="Active"
         app:layout_constraintEnd_toStartOf="@+id/switch_active_sold"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inventoryList" />
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/invCatDropDown"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inventoryList">
 
